<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_filename"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@id/edittext_filename"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edittext_filename"
        app:srcCompat="@drawable/ic_outline_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_filename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/export_file_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageview_filename"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_from_date"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/edittext_date_range_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edittext_date_range_from"
        app:srcCompat="@drawable/ic_date_range_black_24dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_date_range_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/settings_export_dialog_from"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_from_date"
        app:layout_constraintTop_toBottomOf="@id/edittext_filename" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_date_range_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/settings_export_dialog_to"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_from_date"
        app:layout_constraintTop_toBottomOf="@id/edittext_date_range_from" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_export"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/export_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_date_range_to" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_share"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/export_share_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edittext_date_range_to" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
